# zmark

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure.ac  generate_emitted_points.py
autom4te.cache/: output.1  requests  traces.0  traces.1
contrib/: README.md  qt_translations.py  zmark-qt.pro  zmarkd.bash-completion
contrib/bitrpc/: bitrpc.py
contrib/devtools/: README.md  update-translations.py
contrib/gitian-descriptors/: deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-zmark.yml  gitian-win.yml  qt-win.yml
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: base58.py
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh  build-tests.sh.in  pull-tester.py  pull-tester.sh  run-zmarkd-for-test.sh  run-zmarkd-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi  setup.nsi.in  ui.rc
share/certs/: PrivateKeyNotes.md
share/pixmaps/: zmark128.xpm  zmark16.xpm  zmark256.xpm  zmark32.xpm  zmark64.xpm
share/qt/: Info.plist  Info.plist.in  extract_strings_qt.py  make_icons.sh
src/: Makefile  Makefile.am  Makefile.in  Makefile.include  chainparams.cpp  clientversion.h  coins.h  init.cpp  main.cpp  main.h  miner.cpp  net.cpp  netbase.h  noui.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcprotocol.cpp  rpcrawtransaction.cpp  rpcserver.cpp  rpcwallet.cpp  stamp-h1  txdb.cpp  util.cpp  util.h  version.cpp  wallet.cpp  walletdb.cpp  zmark-cli-res.rc  zmark-cli.cpp  zmark-config.h  zmark-config.h.in  zmarkd-res.rc  zmarkd.cpp
src/.deps/: addrman.Po  alert.Po  allocators.Po  base58.Po  bloom.Po  chainparams.Po  checkpoints.Po  coins.Po  core.Po  crypter.Po  db.Po  hash.Po  init.Po  key.Po  keystore.Po  leveldbwrapper.Po  main.Po  miner.Po  net.Po  netbase.Po  noui.Po  protocol.Po  rpcblockchain.Po  rpcclient.Po  rpcdump.Po  rpcmining.Po  rpcmisc.Po  rpcnet.Po  rpcprotocol.Po  rpcrawtransaction.Po  rpcserver.Po  rpcwallet.Po  script.Po  scrypt.Po  sync.Po  txdb.Po  txmempool.Po  util.Po  version.Po  wallet.Po  (+3 more)
src/compat/: glibc_compat.cpp
src/qt/: Makefile  Makefile.am  Makefile.in  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  paymentserver.h  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  sendcoinsentry.h  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  transactiontablemodel.cpp  transactionview.cpp  utilitydialog.cpp  (+16 more)
src/qt/.deps/: libzmarkqt_a-addressbookpage.Po  libzmarkqt_a-addresstablemodel.Po  libzmarkqt_a-askpassphrasedialog.Po  libzmarkqt_a-clientmodel.Po  libzmarkqt_a-coincontroldialog.Po  libzmarkqt_a-coincontroltreewidget.Po  libzmarkqt_a-csvmodelwriter.Po  libzmarkqt_a-editaddressdialog.Po  libzmarkqt_a-guiutil.Po  libzmarkqt_a-intro.Po  libzmarkqt_a-moc_addressbookpage.Po  libzmarkqt_a-moc_addresstablemodel.Po  libzmarkqt_a-moc_askpassphrasedialog.Po  libzmarkqt_a-moc_clientmodel.Po  libzmarkqt_a-moc_coincontroldialog.Po  libzmarkqt_a-moc_coincontroltreewidget.Po  libzmarkqt_a-moc_csvmodelwriter.Po  libzmarkqt_a-moc_editaddressdialog.Po  libzmarkqt_a-moc_guiutil.Po  libzmarkqt_a-moc_intro.Po  libzmarkqt_a-moc_macdockiconhandler.Po  libzmarkqt_a-moc_macnotificationhandler.Po  libzmarkqt_a-moc_monitoreddatamapper.Po  libzmarkqt_a-moc_notificator.Po  libzmarkqt_a-moc_openuridialog.Po  libzmarkqt_a-moc_optionsdialog.Po  libzmarkqt_a-moc_optionsmodel.Po  libzmarkqt_a-moc_overviewpage.Po  libzmarkqt_a-moc_paymentserver.Po  libzmarkqt_a-moc_qvalidatedlineedit.Po  libzmarkqt_a-moc_qvaluecombobox.Po  libzmarkqt_a-moc_receivecoinsdialog.Po  libzmarkqt_a-moc_receiverequestdialog.Po  libzmarkqt_a-moc_recentrequeststablemodel.Po  libzmarkqt_a-moc_rpcconsole.Po  libzmarkqt_a-moc_sendcoinsdialog.Po  libzmarkqt_a-moc_sendcoinsentry.Po  libzmarkqt_a-moc_signverifymessagedialog.Po  libzmarkqt_a-moc_splashscreen.Po  libzmarkqt_a-moc_trafficgraphwidget.Po  (+52 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: zmark_ach.ts  zmark_af_ZA.ts  zmark_ar.ts  zmark_be_BY.ts  zmark_bg.ts  zmark_bs.ts  zmark_ca.ts  zmark_ca@valencia.ts  zmark_ca_ES.ts  zmark_cmn.ts  zmark_cs.ts  zmark_cy.ts  zmark_da.ts  zmark_de.ts  zmark_el_GR.ts  zmark_en.ts  zmark_eo.ts  zmark_es.ts  zmark_es_CL.ts  zmark_es_DO.ts  zmark_es_MX.ts  zmark_es_UY.ts  zmark_et.ts  zmark_eu_ES.ts  zmark_fa.ts  zmark_fa_IR.ts  zmark_fi.ts  zmark_fr.ts  zmark_fr_CA.ts  zmark_gl.ts  zmark_gu_IN.ts  zmark_he.ts  zmark_hi_IN.ts  zmark_hr.ts  zmark_hu.ts  zmark_id_ID.ts  zmark_it.ts  zmark_ja.ts  zmark_ka.ts  zmark_kk_KZ.ts  (+31 more)
src/qt/res/: zmark-qt-res.rc
src/qt/test/: Makefile  Makefile.am  Makefile.in  test_main.cpp  uritests.cpp
src/qt/test/.deps/: test_zmark_qt-moc_paymentservertests.Po  test_zmark_qt-moc_uritests.Po  test_zmark_qt-paymentservertests.Po  test_zmark_qt-test_main.Po  test_zmark_qt-uritests.Po
(+45 files in other folders)
